DOWNLOAD section: fixed spacing issues, added hover motion for products and wrappers, linked all sections, fixed responsive isses, linked email form submission, added a promo banner tab on pro product, fixed foundation grid, FEATURES section: fixed sites linking

--- a/public/static/css/modules/ModCommon/_form.scss
+++ b/public/static/css/modules/ModCommon/_form.scss
@@ -31,6 +31,11 @@ form {
     border-radius: 2px;
     background: $darkWhite;
     -webkit-appearance: none;
+
+    @media only screen and (min-width: $largeWidth) {
+      width: 72%;
+    }
+
     &:focus {
       border-color: $inputFocusBorder;
     }
