--- a/public/static/css/modules/ModDownload/partials/_resources.scss
+++ b/public/static/css/modules/ModDownload/partials/_resources.scss
@@ -3,35 +3,14 @@
 
   margin-bottom: 60px;
 
+
+
   .header-dist {
 
-    padding: 40px 10px 40px 10px;
+    padding: 40px 10px 40px 20px;
 
     @media only screen and (min-width: $mediumWidth) {
-      padding: 60px 10px 20px 10px;
+      padding: 60px 10px 40px 10px;
     }
   }
-
-  .links {
-    float: left;
-    display: inline-block;
-    text-align: center;
-
-    @media only screen and (min-width: $largeWidth) {
-      text-align: left;
-      margin-left: 20px;
-    }
-  }
-  .align {
-    width: 100%;
-    display: block;
-    text-align: center;
-
-    @media only screen and (min-width: $largeWidth) {
-      width: 90%;
-      margin-left: 330px;
-      text-align: left;
-    }
-  }
-
 }
