--- a/public/static/css/modules/ModDownload/partials/_template.scss
+++ b/public/static/css/modules/ModDownload/partials/_template.scss
@@ -6,10 +6,10 @@
 
   .header-dist {
 
-    padding: 40px 10px 40px 10px;
+    padding: 40px 10px 40px 20px;
 
     @media only screen and (min-width: $mediumWidth) {
-      padding: 60px 10px 40px 10px;
+      padding: 60px 10px 60px 10px;
     }
 
     h4.download {
@@ -61,69 +61,12 @@
     }
   }
 
-  .link {
-
-    display: flex;
-    justify-content: flex-start;
-    align-content: space-around;
-
-    @media only screen and (min-width: $largeWidth) {
-      justify-content: flex-end;
-    }
-
-  }
-
   a {
     font-size: 0.8em;
     font-weight: 400;
     line-height: 2em;
     @media only screen and (min-width: $largeWidth) {
       font-size: 1em;
-    }
-  }
-
-  a.link-ce {
-    color: $darkWhite;
-    font-size: 1em;
-    float: left;
-
-    &:hover,
-    &:focus,
-    &:active {
-      color: $brandGreenActive;
-      text-decoration: none;
-    }
-
-  }
-
-  a.link-pro {
-    color: $darkWhite;
-    font-size: 1em;
-    float: right;
-
-    &:hover,
-    &:focus,
-    &:active {
-      color: $brandBlueActive;
-      text-decoration: none;
-    }
-
-  }
-
-  .divider {
-    width: 100%;
-    border-top: 1px solid $darkWhite;
-    margin: 20px 0 10px 0;
-  }
-
-  .svg-icon {
-    @include square(15px);
-    float: left;
-    margin: 18px 10px 0 0;
-    fill: $darkWhite;
-
-    @media only screen and (min-width: $largeWidth) {
-      margin: 10px;
     }
   }
 }
